modules/015-admission-policy-engine/charts/constraint-templates/tests/disallowed-custom-resources/allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed
  namespace: default
spec:
  initContainers:
  - name: foo-init
    image: sleep
    resources:
      limits:
        allowed-gpu/gpu: "1"
  containers:
    - name: foo
      image: gpu-compute
      resources:
        limits:
          allowed-gpu/gpu: "1"
