modules/015-admission-policy-engine/charts/constraint-templates/tests/disallowed-custom-resources/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8DisallowedCustomResources
metadata:
  name: test
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    resourcePatterns:
      - "disallowed-gpu/.*"
