modules/015-admission-policy-engine/charts/constraint-templates/tests/disallowed-custom-resources/disallowed-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed
  namespace: default
spec:
  containers:
  - name: foo
    image: gpu-compute
    resources:
      limits:
        disallowed-gpu/gpu: "1"
      requests:
        disallowed-gpu/gpu: "1"
