modules/015-admission-policy-engine/charts/constraint-templates/tests/disallowed-custom-resources/disallowed-initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed
  namespace: default
spec:
  initContainers:
  - name: foo-init
    image: sleep
    resources:
      limits:
        disallowed-gpu/gpu: "1"
  containers:
    - name: foo
      image: cpu-compute
